--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -2,14 +2,19 @@
 {% load bootstrap3 %}
 
 {% block content %}
-
+<br><br>
 <div class="container">
   <h1>Login</h1>
+  <br>
   <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" class="btn btn-default" value="Log In">
+    <input type="submit" class="btn btn-primary" value="Log In">
   </form>
+  <br><hr>
+  <h3>Don't have an account?</h3>
+  <p>Click Below to Signup</p>
+  <a href="{% url 'accounts:signup' %}"><button type="button" name="button" class="btn btn-secondary">Signup</button></a>
 </div>
 
 
