--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,14 +2,19 @@
 {% load bootstrap3 %}
 
 {% block content %}
-
+<br><br>
 <div class="container">
   <h1>Signup</h1>
+  <br>
   <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input type="submit" class="btn btn-default" value="Sign up">
+    <input type="submit" class="btn btn-primary" value="Sign up">
   </form>
+  <br><hr>
+  <h3>Already have an account?</h3>
+  <p>Click Below to Login</p>
+  <a href="{% url 'accounts:login' %}"><button type="button" name="button" class="btn btn-secondary">Login</button></a>
 </div>
 
 
