Fixed attendence edit bug

--- a/user/templates/user/edit_attendence.html
+++ b/user/templates/user/edit_attendence.html
@@ -47,6 +47,9 @@
       {% endif %}
       <input type="submit" value="Mark Attendence" class="btn btn-primary">
   </form>
+  <br>
+  <p>Note : If Student has left the class</p>
+  <p>Their attendence cannot be modified</p>
 </div>
 
 
