--- a/user/templates/user/attendence_report.html
+++ b/user/templates/user/attendence_report.html
@@ -1,6 +1,34 @@
+
 {% extends 'base.html' %}
 {% block content %}
-{% for i,j in report.items %}
-  {{i}} --->{{j}}
-{% endfor %}
+{% load custom_tags %}
+
+<div class="jumbotron">
+  <h1>{{subject.subject}} Sem {{subject.sem}}</h1>
+  <h1> Attendence Report:</h1>
+  <br><br><hr>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Student Name</th>
+        <th>Classes Conducted</th>
+        <th>Classes Attended</th>
+        <th>% Attendence</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for i,j in report.items %}
+      <tr>
+        <td>{{i}}</td>
+        <td>{{total_class}}</td>
+        <td>{{j}}</td>
+        <td>{{ per 10 20 }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+
+
 {% endblock %}
