--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -19,6 +19,7 @@
     <a href="{% url 'user:all_class' %}" class="btn btn-secondary">View Your classes</a>
   {% else %}
     <a href="{% url 'user:student_class' %}"  class="btn btn-primary" >View all classes</a>
+    <a href="{% url 'user:marks_report' %}" class="btn btn-secondary">Marks Report</a>
   {% endif %}
 </div>
 <br>
